...
  'calendar.month': 'Месяц',
  'calendar.year': 'Год',
  'calendar.absence': 'Отпуск',
  'calendar.today': 'Сегодня',
  'calendar.continueWorkout': 'Продолжить тренировку',

  'workout.inProgress': 'Идёт',
  'workout.startedAt': 'начата в {time}',
  'workout.addExercise': 'Добавить упражнение',
  'workout.addSet': 'подход',
  'workout.notFinished': 'не завершена',
  'workout.history': 'История упражнения',
  'workout.dateTaken': 'На эту дату тренировка уже есть',
...
